2004-06-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: Update script.  Move development to
	lilypond_2_3_2 branch for now.

2004-06-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/page-breaking.scm (ly:optimal-page-breaks): don't do
	negative penalties.
	cleanups.

	* Documentation/user/changing-defaults.itely (Creating contexts):
	index entries

	* scm/page-breaking.scm (ly:optimal-page-breaks): new
	file. Rewrite function. 

	* lily/paper-book.cc (pages): new interface: page-breaking returns
	list of line-list.

	* lily/page.cc (Page): take lines argument.

	* scm/document-translation.scm (all-engravers-doc): link to user man

	* scm/page-layout.scm (ly:optimal-page-breaks): use penalty iso. score.

	* Documentation/user/notation.itely (Relative octaves): typo.

	* lily/paper-book.cc (LY_DEFINE): ly:output-formats. New function.

2004-06-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: Update build script.

2004-06-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: Add font scaling.  Attempt to resurrect
	gnome backend.

	* scm/framework-gnome.scm: New file.

	* scm/lily.scm: Use it.

	* lily/paper-outputter.cc: Janitorial cleanups.
	(ly:outputter-dump-string): Remove unreachable statement.

	* scm/framework-ps.scm: Add header.  Janitorial cleanups.
	(ice-9): Bugfix: Add srfi-1.

	* scm/framework-tex.scm: Add header.  Janitorial cleanups.

2004-06-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/new-lyric-combine-music-iterator.cc (do_quit): put warning
	in do_quit()
	
2004-06-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/book-paper-defaults.ly: set optimal-page-breaks as default

2004-06-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	override of Beam::position-callbacks. Why would grace beams not be
	quantized? Fixes: weird-stem-size-grace. Backportme.

	* lily/new-lyric-combine-music-iterator.cc (find_voice): issue