@@ -1,3 +1,7 @@
+2004-06-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scm/framework-ps.scm: don't load output-XXX from framework-XXX
+
 2004-06-12  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/output-gnome.scm: Update script.  Move development to
